[gd_scene load_steps=32 format=3 uid="uid://bpnduke2b73xy"]

[ext_resource type="Script" uid="uid://dae2rmsms6h6q" path="res://scripts/main_scene.gd" id="1_w2twt"]
[ext_resource type="Shader" uid="uid://55nrp2byy5or" path="res://shaders/main_scene.gdshader" id="2_18nlu"]
[ext_resource type="Script" uid="uid://d040myf8j60s0" path="res://scripts/backdrop_liquid_metal.gd" id="2_c16ls"]
[ext_resource type="Script" uid="uid://iklhk11s2odl" path="res://scripts/agent.gd" id="2_pw63i"]
[ext_resource type="Script" uid="uid://k8k86g4opic5" path="res://scripts/postcard_expanded.gd" id="3_pu3yx"]
[ext_resource type="Shader" uid="uid://bdrb2pjd358er" path="res://shaders/background_nebula_fog.gdshader" id="4_6wevv"]
[ext_resource type="Script" uid="uid://3l3liv18k224" path="res://scripts/background_nebula_fog.gd" id="5_e1cbu"]
[ext_resource type="Texture2D" uid="uid://bj1jc81kjtijn" path="res://sprites/artflow_202509021657.png" id="5_rt2n2"]
[ext_resource type="Texture2D" uid="uid://cilwnq4b1f3fe" path="res://sprites/artflow_202509021709.png" id="6_c16ls"]
[ext_resource type="Texture2D" uid="uid://bn2esl2koyywn" path="res://resources/new_noise_texture_2d.tres" id="6_e1cbu"]
[ext_resource type="Shader" uid="uid://pbv88k4cgjbk" path="res://shaders/background_underglow.gdshader" id="7_mngbo"]
[ext_resource type="Script" uid="uid://bkfmtfuowwbe" path="res://scripts/background_underglow.gd" id="8_4w45t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c1pb6"]
shader = ExtResource("2_18nlu")
shader_parameter/use_matcap = false
shader_parameter/scale = 1.6
shader_parameter/speed_a = 0.06
shader_parameter/speed_b = -0.035
shader_parameter/distortion = 0.15
shader_parameter/normal_strength = 3.2
shader_parameter/ripple_amp = 0.09
shader_parameter/pulse_amp = 0.25
shader_parameter/pulse_hz = 0.45
shader_parameter/tint_color = Vector3(0.9, 0.92, 0.95)
shader_parameter/spec_power = 38.0
shader_parameter/spec_intensity = 1.1
shader_parameter/contrast = 1.08
shader_parameter/brightness = 0.0
shader_parameter/texel = Vector2(0.00390625, 0.00390625)
shader_parameter/time = 0.0
shader_parameter/scroll_y = 0.0
shader_parameter/parallax = 0.0008
shader_parameter/use_card_glints = true
shader_parameter/line_count = 0
shader_parameter/line_y = PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/line_width = 0.02
shader_parameter/glint_strength = 0.55
shader_parameter/glint_freq = 22.0
shader_parameter/ripple_count = 0
shader_parameter/ripple_pos = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/ripple_t = PackedFloat32Array(0, 0, 0, 0)
shader_parameter/ripple_life = 2.6
shader_parameter/ripple_disp = 0.06
shader_parameter/ripple_wave = 0.35
shader_parameter/ripple_speed = 1.6
shader_parameter/ripple_decay = 2.2
shader_parameter/ripple_highlight = 0.18
shader_parameter/ripple_highlight_decay = 3.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mngbo"]
shader = ExtResource("4_6wevv")
shader_parameter/time = 0.0
shader_parameter/scroll_y = 0.0
shader_parameter/parallax = 0.0006
shader_parameter/base_color = Vector3(0.035, 0.04, 0.055)
shader_parameter/star_color = Vector3(0.85, 0.9, 1)
shader_parameter/nebula_color = Vector3(0.15, 0.2, 0.35)
shader_parameter/vignette = 0.35
shader_parameter/nebula_amp = 0.2
shader_parameter/nebula_scale = 0.65
shader_parameter/star_scale = 3.2
shader_parameter/star_density = 0.12
shader_parameter/star_sharp = 8.0
shader_parameter/sparkle_speed = 0.4
shader_parameter/sparkle_amp = 0.35
shader_parameter/twinkle_scale = 1.8
shader_parameter/drift_x = 0.02
shader_parameter/drift_y = -0.015

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4w45t"]
shader = ExtResource("7_mngbo")
shader_parameter/time = 0.0
shader_parameter/scroll_y = 0.0
shader_parameter/parallax = 0.0008
shader_parameter/base_color = Vector3(0.02, 0.025, 0.032)
shader_parameter/glow_color = Vector3(0.26, 0.42, 0.78)
shader_parameter/vignette = 0.28
shader_parameter/glow_amount = 0.55
shader_parameter/glow_scale = 0.85
shader_parameter/flow_x = 0.015
shader_parameter/flow_y = -0.01
shader_parameter/glow_power = 2.2
shader_parameter/pulse_amp = 0.12
shader_parameter/pulse_hz = 0.06
shader_parameter/use_card_underglow = false
shader_parameter/line_count = 0
shader_parameter/line_y = PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/line_width = 0.035
shader_parameter/line_strength = 0.22
shader_parameter/texel = Vector2(0.00390625, 0.00390625)

[sub_resource type="SpriteFrames" id="SpriteFrames_pu3yx"]
animations = []

[sub_resource type="AtlasTexture" id="AtlasTexture_qnvri"]
atlas = ExtResource("5_rt2n2")
region = Rect2(440, 0, 220, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kiap"]
atlas = ExtResource("5_rt2n2")
region = Rect2(0, 330, 220, 330)

[sub_resource type="SpriteFrames" id="SpriteFrames_18nlu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnvri")
}],
"loop": true,
"name": &"blank",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kiap")
}],
"loop": true,
"name": &"filled",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bjr6s"]
atlas = ExtResource("5_rt2n2")
region = Rect2(220, 330, 220, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r4nu"]
atlas = ExtResource("5_rt2n2")
region = Rect2(440, 330, 220, 330)

[sub_resource type="SpriteFrames" id="SpriteFrames_c1pb6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjr6s")
}],
"loop": true,
"name": &"blank",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r4nu")
}],
"loop": true,
"name": &"filled",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_t2wkr"]
atlas = ExtResource("6_c16ls")
region = Rect2(0, 0, 220, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_exfk4"]
atlas = ExtResource("6_c16ls")
region = Rect2(220, 0, 220, 330)

[sub_resource type="SpriteFrames" id="SpriteFrames_6wevv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2wkr")
}],
"loop": true,
"name": &"blank",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exfk4")
}],
"loop": true,
"name": &"filled",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8vbeh"]
atlas = ExtResource("6_c16ls")
region = Rect2(440, 0, 220, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq1qa"]
atlas = ExtResource("6_c16ls")
region = Rect2(0, 330, 220, 330)

[sub_resource type="SpriteFrames" id="SpriteFrames_e1cbu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vbeh")
}],
"loop": true,
"name": &"blank",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq1qa")
}],
"loop": true,
"name": &"filled",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_es8iv"]
atlas = ExtResource("6_c16ls")
region = Rect2(220, 330, 220, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_e36wk"]
atlas = ExtResource("6_c16ls")
region = Rect2(440, 330, 220, 330)

[sub_resource type="SpriteFrames" id="SpriteFrames_mngbo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_es8iv")
}],
"loop": true,
"name": &"blank",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e36wk")
}],
"loop": true,
"name": &"filled",
"speed": 5.0
}]

[node name="main_scene" type="Node2D"]
script = ExtResource("1_w2twt")
metadata/_edit_vertical_guides_ = [-206.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI_panel_background_mid" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_top = -5.0
offset_right = 1000.0
offset_bottom = 645.0
scale = Vector2(0.544486, 1.54904)
color = Color(0, 0.863957, 0.755654, 1)

[node name="background_animation" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_c1pb6")
offset_right = 535.0
offset_bottom = 950.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_c16ls")

[node name="background_nebula_fog" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_mngbo")
offset_right = 535.0
offset_bottom = 950.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("5_e1cbu")
noise_a = ExtResource("6_e1cbu")

[node name="background_nebula_fog2" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_4w45t")
offset_right = 535.0
offset_bottom = 950.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("8_4w45t")

[node name="UI_panel_background_left" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_left = -127.0
offset_top = 10.0
offset_right = -67.0
offset_bottom = 960.0
color = Color(0.870221, 0.964229, 0.966078, 1)

[node name="UI_panel_background_right" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_left = 726.0
offset_top = 8.0
offset_right = 786.0
offset_bottom = 958.0
color = Color(0.870588, 0.964706, 0.964706, 1)

[node name="chat_scroll" type="ScrollContainer" parent="CanvasLayer"]
visible = false
offset_left = 305.0
offset_top = 39.0
offset_right = 905.0
offset_bottom = 539.0
scale = Vector2(1.16965, 1.11974)
follow_focus = true
draw_focus_border = true
horizontal_scroll_mode = 0

[node name="group_chat" type="RichTextLabel" parent="CanvasLayer/chat_scroll"]
custom_minimum_size = Vector2(600, 40)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
autowrap_mode = 0

[node name="agent_1" type="Node2D" parent="CanvasLayer"]
script = ExtResource("2_pw63i")

[node name="agent_2" type="Node2D" parent="CanvasLayer"]
script = ExtResource("2_pw63i")

[node name="agent_3" type="Node2D" parent="CanvasLayer"]
script = ExtResource("2_pw63i")

[node name="agent_4" type="Node2D" parent="CanvasLayer"]
script = ExtResource("2_pw63i")

[node name="agent_5" type="Node2D" parent="CanvasLayer"]
script = ExtResource("2_pw63i")

[node name="feed_scroll" type="ScrollContainer" parent="CanvasLayer"]
clip_contents = false
custom_minimum_size = Vector2(500, 300)
offset_left = 20.0
offset_top = 57.0
offset_right = 520.0
offset_bottom = 357.0
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="feed_container" type="VBoxContainer" parent="CanvasLayer/feed_scroll"]
layout_mode = 2

[node name="UI_panel_chat_left" type="ColorRect" parent="CanvasLayer"]
offset_top = 3.0
offset_right = 10.0
offset_bottom = 953.0
color = Color(0, 0, 0, 1)

[node name="UI_panel_chat_left2" type="ColorRect" parent="CanvasLayer"]
offset_left = -178.0
offset_top = 8.0
offset_right = -168.0
offset_bottom = 958.0
color = Color(0, 0, 0, 1)

[node name="UI_panel_chat_right" type="ColorRect" parent="CanvasLayer"]
offset_left = 822.0
offset_top = 1.0
offset_right = 832.0
offset_bottom = 951.0
color = Color(0, 0, 0, 1)

[node name="UI_panel_chat_right2" type="ColorRect" parent="CanvasLayer"]
offset_left = 530.0
offset_top = -3.0
offset_right = 540.0
offset_bottom = 947.0
color = Color(0, 0, 0, 1)

[node name="UI_panel_chat_top" type="ColorRect" parent="CanvasLayer"]
offset_left = -23.0
offset_top = -2.0
offset_right = 577.0
offset_bottom = 28.0
color = Color(0, 0, 0, 1)

[node name="UI_panel_chat_bottom" type="ColorRect" parent="CanvasLayer"]
offset_left = -5.0
offset_top = 930.0
offset_right = 595.0
offset_bottom = 960.0
color = Color(0, 0, 0, 1)

[node name="label_researchers" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 360.0
offset_top = 36.0
offset_right = 455.0
offset_bottom = 59.0
text = "Researchers"

[node name="agent_list" type="VBoxContainer" parent="CanvasLayer"]
visible = false
offset_left = 347.0
offset_top = 70.0
offset_right = 387.0
offset_bottom = 110.0

[node name="button_research_tab" type="Button" parent="CanvasLayer"]
visible = false
self_modulate = Color(0, 0, 0.905882, 1)
offset_left = 507.0
offset_top = 30.0
offset_right = 527.0
offset_bottom = 50.0

[node name="button_call_AI_update" type="Button" parent="CanvasLayer"]
visible = false
self_modulate = Color(0, 0, 0.905882, 1)
offset_left = 13.0
offset_top = 31.0
offset_right = 33.0
offset_bottom = 51.0

[node name="ai_request" type="HTTPRequest" parent="CanvasLayer"]
use_threads = true

[node name="expand_request" type="HTTPRequest" parent="CanvasLayer"]
use_threads = true

[node name="vote_request" type="HTTPRequest" parent="CanvasLayer"]
use_threads = true

[node name="react_request" type="HTTPRequest" parent="CanvasLayer"]
use_threads = true

[node name="power_request" type="HTTPRequest" parent="CanvasLayer"]
use_threads = true

[node name="expanded_card" type="PanelContainer" parent="CanvasLayer"]
offset_right = 1092.0
offset_bottom = 960.0
scale = Vector2(0.495, 1)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_pu3yx")

[node name="CanvasLayer2" type="CanvasLayer" parent="CanvasLayer/expanded_card"]

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/expanded_card/CanvasLayer2"]
offset_right = 530.0
offset_bottom = 531.0
drag_area_highlight_in_editor = true

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 509)
layout_mode = 2

[node name="approval_rating_container" type="HSplitContainer" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer"]
layout_mode = 2
split_offset = 48

[node name="placeholder" type="Label" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer/approval_rating_container"]
layout_mode = 2

[node name="approval_rating" type="Label" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer/approval_rating_container"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10

[node name="comment_container" type="HSplitContainer" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer"]
layout_mode = 2
split_offset = 234
dragging_enabled = false
dragger_visibility = 1
drag_area_highlight_in_editor = true

[node name="placeholder" type="Label" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer/comment_container"]
layout_mode = 2

[node name="number_comments" type="Label" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer/comment_container"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "32"

[node name="knowledge_container" type="HSplitContainer" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer"]
layout_mode = 2
split_offset = 372
dragging_enabled = false
dragger_visibility = 1
drag_area_highlight_in_editor = true

[node name="placeholder" type="Label" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer/knowledge_container"]
layout_mode = 2

[node name="knowledge_value" type="Label" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer/knowledge_container"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10

[node name="surprise_container" type="HSplitContainer" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer"]
layout_mode = 2
split_offset = 417
dragging_enabled = false
dragger_visibility = 1
drag_area_highlight_in_editor = true

[node name="placeholder" type="Label" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer/surprise_container"]
layout_mode = 2

[node name="surprise_value" type="Label" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer/surprise_container"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10

[node name="power_container" type="HSplitContainer" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer"]
visible = false
layout_mode = 2
split_offset = 454
dragging_enabled = false
dragger_visibility = 1
drag_area_highlight_in_editor = true

[node name="placeholder" type="Label" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer/power_container"]
layout_mode = 2

[node name="power_value" type="Label" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/PanelContainer/power_container"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 5

[node name="BoxContainer2" type="BoxContainer" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="decoration_mid_bar2" type="ColorRect" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer/BoxContainer2"]
custom_minimum_size = Vector2(540, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="VSplitContainer2" type="VSplitContainer" parent="CanvasLayer/expanded_card/CanvasLayer2"]
offset_right = 535.0
offset_bottom = 970.0
drag_area_highlight_in_editor = true

[node name="buffer_label" type="Label" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer2"]
layout_mode = 2

[node name="decoration_mid_bar3" type="ColorRect" parent="CanvasLayer/expanded_card/CanvasLayer2/VSplitContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="Button" type="Button" parent="CanvasLayer/expanded_card/CanvasLayer2"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 13.0
offset_top = 534.0
offset_right = 533.0
offset_bottom = 964.0

[node name="background_expanded_mode" type="ColorRect" parent="CanvasLayer/expanded_card"]
layout_mode = 2

[node name="decoration_mid_bar" type="ColorRect" parent="CanvasLayer/expanded_card"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="decoration_left_bar" type="ColorRect" parent="CanvasLayer/expanded_card"]
custom_minimum_size = Vector2(20, 970)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="decoration_right_bar" type="ColorRect" parent="CanvasLayer/expanded_card"]
custom_minimum_size = Vector2(20, 970)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="decoration_up_bar" type="ColorRect" parent="CanvasLayer/expanded_card"]
custom_minimum_size = Vector2(30, 10)
layout_mode = 2
size_flags_vertical = 0
color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer/expanded_card"]

[node name="ScrollContainer" type="Control" parent="CanvasLayer/expanded_card/CanvasLayer"]
clip_contents = true
custom_minimum_size = Vector2(400, 420)
layout_mode = 3
anchors_preset = 0
offset_top = 70.0
offset_right = 540.0
offset_bottom = 470.0
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="label_content" type="RichTextLabel" parent="CanvasLayer/expanded_card/CanvasLayer/ScrollContainer"]
modulate = Color(0, 0, 0, 1)
z_index = 1
custom_minimum_size = Vector2(470, 300)
layout_mode = 2
offset_left = 35.0
offset_right = 505.0
offset_bottom = 400.0
size_flags_horizontal = 6
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true

[node name="avatar" type="AnimatedSprite2D" parent="CanvasLayer/expanded_card/CanvasLayer"]
visible = false
position = Vector2(29, 43)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_pu3yx")
animation = &""

[node name="approval_anim" type="AnimatedSprite2D" parent="CanvasLayer/expanded_card/CanvasLayer"]
position = Vector2(49, 504)
sprite_frames = SubResource("SpriteFrames_18nlu")
animation = &"blank"

[node name="Button" type="Button" parent="CanvasLayer/expanded_card/CanvasLayer/approval_anim"]
self_modulate = Color(1, 1, 1, 0)
z_as_relative = false
offset_left = -8.0
offset_top = -11.0
offset_right = 9.0
offset_bottom = 6.0

[node name="disapproval_anim" type="AnimatedSprite2D" parent="CanvasLayer/expanded_card/CanvasLayer"]
position = Vector2(87, 506)
sprite_frames = SubResource("SpriteFrames_c1pb6")
animation = &"blank"

[node name="Button" type="Button" parent="CanvasLayer/expanded_card/CanvasLayer/disapproval_anim"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -7.0
offset_top = -14.0
offset_right = 10.0
offset_bottom = 3.0

[node name="comment_anim" type="AnimatedSprite2D" parent="CanvasLayer/expanded_card/CanvasLayer"]
position = Vector2(237, 503)
sprite_frames = SubResource("SpriteFrames_6wevv")
animation = &"blank"

[node name="Button" type="Button" parent="CanvasLayer/expanded_card/CanvasLayer/comment_anim"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -12.0
offset_top = -12.0
offset_right = 5.0
offset_bottom = 5.0

[node name="knowledge_anim" type="AnimatedSprite2D" parent="CanvasLayer/expanded_card/CanvasLayer"]
position = Vector2(379, 506)
sprite_frames = SubResource("SpriteFrames_e1cbu")
animation = &"blank"

[node name="Button" type="Button" parent="CanvasLayer/expanded_card/CanvasLayer/knowledge_anim"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -11.0
offset_top = -15.0
offset_right = 6.0
offset_bottom = 2.0

[node name="shock_anim" type="AnimatedSprite2D" parent="CanvasLayer/expanded_card/CanvasLayer"]
position = Vector2(419, 506)
sprite_frames = SubResource("SpriteFrames_mngbo")
animation = &"blank"

[node name="Button" type="Button" parent="CanvasLayer/expanded_card/CanvasLayer/shock_anim"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -14.0
offset_right = 9.0
offset_bottom = 3.0

[node name="HSplitContainer" type="HSplitContainer" parent="CanvasLayer/expanded_card"]
layout_mode = 2
split_offset = 119
drag_area_highlight_in_editor = true

[node name="label_title_buffer" type="RichTextLabel" parent="CanvasLayer/expanded_card/HSplitContainer"]
modulate = Color(0, 0, 0, 1)
z_index = 1
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true

[node name="label_title" type="RichTextLabel" parent="CanvasLayer/expanded_card/HSplitContainer"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
z_index = 1
clip_contents = false
custom_minimum_size = Vector2(850, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
fit_content = true

[node name="label_author" type="Label" parent="CanvasLayer/expanded_card"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
